[project]
name = "advicemesh"
version = "1.1.0"
description = "AI-powered interview advice tracker for Reddit"
authors = [
    {name = "Sita Sanon", email = "sanon.sita@gmail.com"}
]
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = ">=1.56.0"
requests = ">=2.31.0"
pandas = ">=2.0.0"
python-dotenv = ">=1.0.0"
pymupdf = ">=1.24.0"
watchdog = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-dotenv = ">=0.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
